--- a/style.css
+++ b/style.css
@@ -42,8 +42,15 @@ body
         align-items: center;
         margin-top: 20px;    
     }
+    .navbar__bottom_container__accounts, .navbar__bottom_container__finance, .navbar__bottom_container__contat
+    {
+        color: black;
+        text-decoration: none;
+        
+    }
     .navbar__bottom_container__summary
     {
+        color: black;
         font-size: bold;    
         font-weight: 800;
         text-decoration-line: underline;
@@ -64,16 +71,17 @@ body
         flex-wrap: wrap;
         justify-content: center;
         align-items: center;
+        gap: 80px;
     }
   
-    .acc__saving div 
+    .acc__saving div, .acc__finance div, .acc__cards div
     {
         display: flex;
         justify-content: space-between;
         
                 
     }
-    .acc__saving__tit
+    .acc__saving__tit,.acc__finance__tit, .acc__cards__tit
     {
         font-size: large;
         font-weight: 500;
@@ -83,8 +91,9 @@ body
         padding-top: 5px;
         padding-bottom: 5px;
         border-radius: 20px;
+        width: 350px;
     }
-    .acc__saving__data
+    .acc__saving__data, .acc__finance__data, .acc__cards__data
     {
         background-color: white;
         padding-left: 15px;
@@ -101,7 +110,25 @@ body
     {
         border-radius: 10px;
     }
-    
+    .acc__cards__tit
+    {
+        margin-top: 150px;
+    }    
+    .footer__adve
+    {
+        display: flex;
+        justify-content: center;
+        margin: auto;
+        margin-top: 30px;
+        margin-bottom: 20px;
+    }
+    .footer__adve img 
+    {
+        width: 1100px;
+        height: 300px;
+        border-radius: 10px;
+        opacity: 0.7;
+    }
 }
 
 
