--- a/accountsstyle.css
+++ b/accountsstyle.css
@@ -1,57 +1,58 @@
-*{
+* {
     padding: 0;
     margin: 0;
 }
-body
-{
+
+body {
     font-family: "Inter", serif;
     background-color: #F5F5F5;
-    
 
-    .navbar__top
-    {
+
+    .navbar__top {
         display: flex;
         justify-content: space-around;
         align-items: center;
-        margin-left:150px ;
-        margin-right:150px ;
+        margin-left: 150px;
+        margin-right: 150px;
         margin-top: 30px;
-        
+
     }
-    .navbar__top__image
-    {
+
+    .navbar__top__image {
         width: 100px;
         height: 66px;
     }
-    .navbar__bottom_container
-    {
+
+    .navbar__bottom_container {
         display: flex;
         gap: 48px;
         width: 1350px;
         align-items: center;
         justify-content: center;
-        
-                
+
+
     }
-    .navbar__bottom 
-    {
+
+    .navbar__bottom {
         background-color: white;
         width: 100%;
         height: 66px;
         display: flex;
         align-items: center;
-        margin-top: 20px;    
+        margin-top: 20px;
     }
-    .navbar__bottom_container__contat, .navbar__bottom_container__summary, .navbar__bottom_container__finance
-    {
+
+    .navbar__bottom_container__contat,
+    .navbar__bottom_container__summary,
+    .navbar__bottom_container__finance {
         color: black;
         text-decoration: none;
-        
+
     }
-    .navbar__bottom_container__accounts
-    {
+
+    .navbar__bottom_container__accounts {
         color: black;
-        font-size: bold;    
+        font-size: bold;
         font-weight: 800;
         text-decoration-line: underline;
         text-decoration-color: blue;
@@ -59,153 +60,276 @@ body
         text-decoration-thickness: 5px;
         text-underline-offset: 20px
     }
-   .acc__title
-   {
-    width: 60%;
-    margin: auto ;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 10px;
-    justify-content: space-around;
-    align-items: center;
-   }
-   .acc__card__container
-   {
-    display: flex;
-    gap: 150px;
-    align-items: center;
-    justify-content: space-between;
-    width: 900px;
-    margin: auto;
-    
-   }
-   .acc__card__container__card
-   {
-    display: flex;
-    position: relative;
-    
-    
-   }
-   .acc__card__container__item
-   {
-    display: flex;
-    align-items: top;
-    width: 350px;
-    height: 225px;
-    background-color: green;
-    gap: 20px;
-    padding: 10px;
-    background: linear-gradient(112deg, #73F1FF 0%, #7CB1FF 100%);
-    border-radius: 12px;
-    justify-content: space-between;
-    
-    
-   }
-  
-   .acc__card__container__item h5,p 
-   {
-    padding-bottom: 10px;
-    font-size: 14px;
-   }
-   .acc__card__container__item h5
-   {
-    color: white;
-   }
-   .acc__card__container__item__bottom
-   {
-    display: flex;
-    justify-content: space-between;
-    position: absolute;
-    width: 350px;
-    height: 64px;
-    padding-left: 10px;
-    padding-right: 10px;
-    padding-top: 10px;
-    background: linear-gradient(180deg, rgba(255, 255, 255, 0.3) 0%, rgba(255, 255, 255, 0) 100%);
-    border-radius: 0px 0px 12px 12px;
-    bottom: 0px;
-    left: 0px;
-   }
 
-   .searchtrans
-   {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    margin: auto;
-    margin-left: 500px;
-    margin-right: 500px;
-    margin-top: 50px;
-   }
-   .search h1 
-   {
-    font-size: 20px;
-    background: linear-gradient(148.88deg, #003DA7 -0.58%, #005DFF 92.95%);
-    color: white;
-    border-radius: 4px 4px 0px 0px;
-    padding: 5px;
-    margin-bottom: 10px;
-   }
-   .search td
-   {
-     padding-bottom: 25px;
-   }
-   .soa
-   {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: white;
-    padding: 10px;
-    margin: auto;
-    margin-top: 30px;
-    margin-bottom: 30px;
-    width: 900px;
-   }
-   .soa i 
-   {
-    padding-left: 20px;
-   }
-  .soadet
-  {
-    display: flex;
-    flex-direction: column;
-    width: 900px;
-    margin: auto;
-    justify-content: center;
-    margin-bottom: 30px;
+    .navbar-menu-toggle {
+        display: none;
+    }
+
+    .side-navbar-link {
+        margin-bottom: 30px;
+    }
+
+    .side-navbar-links a {
+        text-decoration: none;
+        color: black;
+    }
+
+    .side-navbar-links a:hover {
+        text-decoration: underline;
+        color: blue;
+        font-size: 16px;
+        font-weight: 600;
+    }
+
+    .side-navbar {
+        background-color: white;
+        color: black;
+        width: 35%;
+        height: 100%;
+        position: fixed;
+        top: 0px;
+        left: -50%;
+        padding: 20px;
+        transition: 1s;
+        box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+        z-index: 22;
+    }
+
+    .acc__title {
+        width: 60%;
+        margin: auto;
+        margin-top: 20px;
+        margin-bottom: 20px;
+        display: flex;
+        flex-wrap: wrap;
+        gap: 10px;
+        justify-content: space-around;
+        align-items: center;
+    }
+
+    .acc__card__container {
+        display: flex;
+        gap: 150px;
+        align-items: center;
+        justify-content: space-between;
+        width: 900px;
+        margin: auto;
+        overflow: hidden;
+
+    }
+
+    .acc__card__container__card {
+        display: flex;
+        position: relative;
+
+
+    }
+
+    .acc__card__container__item {
+        display: flex;
+        align-items: top;
+        width: 350px;
+        height: 225px;
+        background-color: green;
+        gap: 20px;
+        padding: 10px;
+        background: linear-gradient(112deg, #73F1FF 0%, #7CB1FF 100%);
+        border-radius: 12px;
+        justify-content: space-between;
+
+
+    }
+
+    .acc__card__container__item h5,
+    p {
+        padding-bottom: 10px;
+        font-size: 14px;
+    }
+
+    .acc__card__container__item h5 {
+        color: white;
+    }
+
+    .acc__card__container__item__bottom {
+        display: flex;
+        justify-content: space-between;
+        position: absolute;
+        width: 350px;
+        height: 64px;
+        padding-left: 10px;
+        padding-right: 10px;
+        padding-top: 10px;
+        background: linear-gradient(180deg, rgba(255, 255, 255, 0.3) 0%, rgba(255, 255, 255, 0) 100%);
+        border-radius: 0px 0px 12px 12px;
+        bottom: 0px;
+        left: 0px;
+    }
+
+    .searchtrans {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        margin: auto;
+        margin-left: 500px;
+        margin-right: 500px;
+        margin-top: 50px;
+    }
+
+    .search h1 {
+        font-size: 20px;
+        background: linear-gradient(148.88deg, #003DA7 -0.58%, #005DFF 92.95%);
+        color: white;
+        border-radius: 4px 4px 0px 0px;
+        padding: 5px;
+        margin-bottom: 10px;
+    }
+
+    .search td {
+        padding-bottom: 25px;
+    }
+
+    .soa {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        background-color: white;
+        padding: 10px;
+        margin: auto;
+        margin-top: 30px;
+        margin-bottom: 30px;
+        width: 900px;
+    }
+
+    .soa i {
+        padding-left: 20px;
+    }
+
+    .soadet {
+        display: flex;
+        flex-direction: column;
+        width: 900px;
+        margin: auto;
+        justify-content: center;
+        margin-bottom: 30px;
+
+    }
+
+    .soadet__title,
+    .soadet__data1,
+    .soadet__data2 {
+        display: grid;
+        grid-template-columns: 1fr 1fr 5fr 1fr 1fr 1fr;
+    }
+
+    .soadet__title {
+        background-color: #B2B2B2;
+        padding: 5px;
+    }
+
+    .soadet__data1 {
+        background-color: white;
+        padding: 5px;
+        font-size: 16px;
+        font-weight: 200;
+        color: #B2B2B2;
+
+    }
+
+    .soadet__data2 {
+
+        padding: 5px;
+        font-size: 16px;
+        font-weight: 200;
+        color: #B2B2B2;
+
+    }
+
+
+
     
-  }
-  .soadet__title, .soadet__data1, .soadet__data2
+/* Media Query */
+
+/* Media Query - 576 */
+@media (min-width:0px) and (max-width: 576px) {
+    .navbar {
+        margin-left: 20px;
+        margin-right: 20px;
+        margin-top: 20px;
+        justify-content: space-around;
+
+    }
+
+    .navbar__top {
+
+        margin-left: 10px;
+        margin-right: 10px;
+        margin-top: 0px;
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .navbar__top__image {
+       
+       padding-left: 10px;
+        
+    }
+
+    .navbar__top__text h1,
+    h2 {
+        font-size: 14px;
+    }
+
+    .navbar__top__text p {
+        font-size: 10px;
+    }
+    .navbar__bottom
+    {
+        display: none;
+    }
+    .navbar-menu-toggle {
+        padding-top: 8px;
+        padding-bottom: 8px;
+        padding-left: 10px;
+        padding-right: 10px;
+        background-color: #979ABB;
+        color: white;
+        box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+        border-radius: 3px;
+        margin-top: 20px;
+        display: inline-block;
+    }
+
+ }
+
+  /* Media Query - 577-768px */
+  @media (min-width: 577px) and (max-width: 768px)
   {
-    display: grid;
-    grid-template-columns: 1fr 1fr 5fr 1fr 1fr 1fr;
+
+      .navbar {
+          
+          margin-top: 20px;
+          justify-content: space-around;
+
+      }
+      .navbar__top {
+
+          margin-left: 30px;
+          margin-right: 30px;
+          margin-top: 10px;
+          display: flex;
+          justify-content: space-between;
+      }
+     
+      .navbar__bottom_container {
+        
+        
+        justify-content: start;
+        margin-left: 30px;
+
+
+    }
+
   }
-  .soadet__title
-  {
-    background-color:#B2B2B2 ;
-    padding: 5px;
-  }
-  .soadet__data1
-  {
-    background-color: white;
-    padding: 5px;
-    font-size: 16px;
-    font-weight: 200;
-    color:#B2B2B2;
+
     
-  }
-  .soadet__data2
-  {
-    
-    padding: 5px;
-    font-size: 16px;
-    font-weight: 200;
-    color:#B2B2B2;
-    
-  }
 }
-
-
