--- a/conrtactstyle.css
+++ b/conrtactstyle.css
@@ -59,6 +59,38 @@ body
         text-decoration-thickness: 5px;
         text-underline-offset: 20px
     }
+    .navbar-menu-toggle {
+        display: none;
+    }
+
+    .side-navbar-link {
+        margin-bottom: 30px;
+    }
+    
+    .side-navbar-links a {
+        text-decoration: none;
+        color: black;
+    }
+    
+    .side-navbar-links a:hover {
+        text-decoration: underline;
+        color: blue;
+        font-size: 16px;
+        font-weight: 600;
+    }
+    .side-navbar {
+        background-color: white;
+        color: black;
+        width: 35%;
+        height: 100%;
+        position: fixed;
+        top: 0px;
+        left: -50%;
+        padding: 20px;
+        transition: 1s;
+        box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+        z-index: 22;
+    }
    .contact__title
    {
     text-align: center;
@@ -163,6 +195,279 @@ body
     opacity: 1;
     transition: opacity 0.3s ease-in-out;
    }
+
+     /* Media Query */
+
+/* Media Query - 576 */
+@media (min-width:0px) and (max-width: 576px) {
+    .navbar {
+        margin-left: 20px;
+        margin-right: 20px;
+        margin-top: 20px;
+        justify-content: space-around;
+
+    }
+
+    .navbar__top {
+
+        margin-left: 10px;
+        margin-right: 10px;
+        margin-top: 0px;
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .navbar__top__image {
+       
+       padding-left: 10px;
+        
+    }
+
+    .navbar__top__text h1,
+    h2 {
+        font-size: 14px;
+    }
+
+    .navbar__top__text p {
+        font-size: 10px;
+    }
+    .navbar__bottom
+    {
+        display: none;
+    }
+    .navbar-menu-toggle {
+        padding-top: 8px;
+        padding-bottom: 8px;
+        padding-left: 10px;
+        padding-right: 10px;
+        background-color: #979ABB;
+        color: white;
+        box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+        border-radius: 3px;
+        margin-top: 20px;
+        display: inline-block;
+    }
+    .contact__title h1 
+    {
+        font-size: 16px;
+        
+    }
+    .contact__container
+    {
+     
+     
+     width: 80%;
+     display: grid;
+     grid-template-columns: 1fr 1fr ; 
+      
+    }
+    .contact__container__item p 
+    {
+        font-size: 16px;
+    }
+    .contact__container__item i 
+    {
+        font-size: 1em;
+    }
+    .contact__message
+   {
+    width: 90%;
+    margin: auto;
+    padding: 20px;
+    display: grid;
+    grid-template-columns: 1fr;
+   }
+   #reset, #submit
+   {
+    font-size: 14px;
+   }
+
+   .contact__message__container img 
+   {
+    width: 100%;
+    height: 150px;
+   }
+   #textarea
+   {
+    height: 200px;
+   }
+ }
+
+  /* Media Query - 577-768px */
+  @media (min-width: 577px) and (max-width: 768px)
+  {
+
+      .navbar {
+          
+          margin-top: 20px;
+          justify-content: space-around;
+
+      }
+      .navbar__top {
+
+          margin-left: 30px;
+          margin-right: 30px;
+          margin-top: 10px;
+          display: flex;
+          justify-content: space-between;
+      }
+     
+      .navbar__bottom_container {            
+        justify-content: start;
+        margin-left: 30px;
+
+    }
+    
+    
+    .contact__container
+    {
+     
+     
+     width: 85%;
+     display: grid;
+     grid-template-columns: 1fr 1fr 1fr; 
+      
+    }
+    .contact__container__item p 
+    {
+        font-size: 16px;
+    }
+    .contact__container__item i 
+    {
+        font-size: 1em;
+    }
+    .contact__message
+    {
+     width: 90%;
+     margin: auto;
+     padding: 20px;
+     display: grid;
+     grid-template-columns: 1fr;
+    }
+    #textarea
+   {
+    width: 98%;
+    height: 200px;
+   }
+   #reset, #submit
+   {
+    font-size: 14px;
+   }
+
+   .contact__message__container img 
+   {
+    width: 100%;
+    height: 250px;
+   }
+}
+/* Media Query - 769-992px */
+@media (min-width: 769px) and (max-width: 992px)
+{
+    
+
+    .contact__container
+    {
+     
+     
+     width: 85%;
+     display: grid;
+     grid-template-columns: 1fr 1fr 1fr; 
+      
+    }
+    .contact__container__item p 
+    {
+        font-size: 20px;
+    }
+    .contact__container__item i 
+    {
+        font-size: 1em;
+    }
+    .contact__message
+    {
+     width: 90%;
+     margin: auto;
+     padding: 20px;
+     display: grid;
+     grid-template-columns: 1fr;
+    }
+    #textarea
+   {
+    width: 98%;
+    height: 200px;
+   }
+   #reset, #submit
+   {
+    font-size: 16px;
+   }
+
+   .contact__message__container img 
+   {
+    width: 100%;
+    height: 250px;
+   }
+   .navbar {
+          
+    margin-top: 20px;
+    justify-content: space-around;
+
+}
+.navbar__top {
+
+    margin-left: 30px;
+    margin-right: 30px;
+    margin-top: 10px;
+    display: flex;
+    justify-content: space-between;
+}
+.navbar__bottom_container {            
+    justify-content: start;
+    margin-left: 30px;
+
 }
 
+}
 
+ /* Media Query - 993-1200px */
+ @media (min-width: 993px) and (max-width: 1200px)
+ {
+  
+
+     .contact__container
+    {
+     
+     
+     width: 50%;
+     display: grid;
+     grid-template-columns: 1fr 1fr ; 
+      
+    }
+    .contact__container__item i 
+    {
+        font-size: 1.5em;
+    }
+    .contact__message
+    {
+     width: 50%;
+     margin: auto;
+     padding: 20px;
+     display: grid;
+     grid-template-columns: 1fr;
+    }
+    #textarea
+    {
+     width: 98%;
+     height: 200px;
+    }
+    #reset, #submit
+   {
+    font-size: 14px;
+   }
+   .contact__message__container img 
+   {
+    width: 100%;
+    height: 250px;
+   }
+ }
+
+    
+}
