--- a/accountsstyle.css
+++ b/accountsstyle.css
@@ -299,6 +299,86 @@ body {
         display: inline-block;
     }
 
+    .acc__title
+    {
+        width: 100%;
+        
+    }
+    .acc__title h1 
+    {
+        font-size: 16px;
+    }
+    .acc__title i 
+    {
+        font-size: 1em;
+    }
+    .acc__card__container__item
+    {
+        width: 220px;
+        height: 150px;
+    }
+    .acc__card__container__item h5,
+    p {
+        padding-bottom: 5px;
+        font-size: 10px;
+    }
+    .acc__card__container__item h4 {
+        padding-bottom: 5px;
+        font-size: 10px;
+    }
+    .acc__card__container__item__bottom
+    {
+        width: 220px;
+        height: 48px;
+    }
+    .acc__card__container {
+        display: flex;
+        gap: 20px;
+        overflow: hidden;
+        margin: auto;
+        margin-bottom: 20px;
+        width: 90%;
+    }
+    .searchtrans {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        margin: auto;
+        width: 80%;
+    }
+    .search h1 {
+        font-size: 14px;
+    
+    }
+    .trans
+    {
+        display: none;
+    }
+    .soadet
+    {
+        width: 90%;
+    }
+    .soadet__title,
+    .soadet__data1,
+    .soadet__data2 {
+        display: grid;
+        grid-template-columns: 1fr 1fr 2fr 1fr 1fr 1fr;
+        gap: 20px;
+        
+    }
+    .soadet h5,h6
+    {
+        font-size: 10px;
+    }
+    .soa
+    {
+        width: 85%;
+    }
+    .soa h4 
+    {
+        font-size: 12px;
+    }
+
  }
 
   /* Media Query - 577-768px */
@@ -328,8 +408,251 @@ body {
 
 
     }
+    
+    .acc__title
+    {
+        width: 100%;
+        
+    }
+    .acc__title h1 
+    {
+        font-size: 24px;
+    }
+    .acc__title i 
+    {
+        font-size: 2em;
+    }
+    .acc__card__container__item
+    {
+        width: 300px;
+        height: 200px;
+    }
+    .acc__card__container__item h5,
+    p {
+        padding-bottom: 5px;
+        font-size: 12px;
+    }
+    .acc__card__container__item h4 {
+        padding-bottom: 5px;
+        font-size: 12px;
+    }
+    .acc__card__container__item__bottom
+    {
+        width: 300px;
+        height: 48px;
+    }
+    .acc__card__container {
+        display: flex;
+        gap: 30px;
+        overflow: hidden;
+        margin: auto;
+        margin-bottom: 20px;
+        width: 90%;
+    }
+    .searchtrans {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        margin: auto;
+        width: 90%;
+    }
+    .trans
+    {
+        display: none;
+    }
+  
+    .soa
+    {
+        width: 90%;
+    }
+    .soa h4 
+    {
+        font-size: 16px;
+    }
+    .soadet
+    {
+        width: 90%;
+    }
+    .soadet__title,
+    .soadet__data1,
+    .soadet__data2 {
+        display: grid;
+        grid-template-columns: 1fr 1fr 2fr 1fr 1fr 1fr;
+        gap: 20px;
+        
+    }
+    .soadet h5,h6
+    {
+        font-size: 12px;
+    }
 
   }
 
+  /* Media Query - 769-992px */
+  @media (min-width: 769px) and (max-width: 992px)
+  {
+    .navbar__top {
+
+        margin-left: 30px;
+        margin-right: 30px;
+        margin-top: 10px;
+        display: flex;
+        justify-content: space-between;
+    }
+    .navbar__bottom_container {
+        
+        
+        justify-content: start;
+        margin-left: 30px;
+
+
+    }
+    .acc__title
+    {
+        width: 100%;
+        
+    }
+    .acc__title h1 
+    {
+        font-size: 24px;
+    }
+    .acc__title i 
+    {
+        font-size: 2em;
+    }
+    .acc__card__container__item
+    {
+        width: 300px;
+        height: 200px;
+    }
+    .acc__card__container__item h5,
+    p {
+        padding-bottom: 5px;
+        font-size: 12px;
+    }
+    .acc__card__container__item h4 {
+        padding-bottom: 5px;
+        font-size: 12px;
+    }
+    .acc__card__container__item__bottom
+    {
+        width: 300px;
+        height: 48px;
+    }
+    .acc__card__container {
+        display: flex;
+        gap: 30px;
+        overflow: hidden;
+        margin: auto;
+        margin-bottom: 20px;
+        width: 72%;
+    }
+    .searchtrans {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        margin-left:30px;
+        width: 40%;
+        
+    }
+    .trans
+    {
+        position: absolute;
+        left: 48%;
+        width: 40%;
+    }
+    .soa
+    {
+        width: 90%;
+    }
+    .soa h4 
+    {
+        font-size: 16px;
+    }
+    .soadet
+    {
+        width: 90%;
+    }
+    .soadet__title,
+    .soadet__data1,
+    .soadet__data2 {
+        display: grid;
+        grid-template-columns: 1fr 1fr 2fr 1fr 1fr 1fr;
+        gap: 20px;
+        
+    }
+    .soadet h5,h6
+    {
+        font-size: 12px;
+    }
+
+  }
+  /* Media Query - 993-1200px */
+  @media (min-width: 993px) and (max-width: 1200px)
+  {
     
+     .navbar {
+         
+         margin-top: 20px;
+         justify-content: space-around;
+
+     }
+     .navbar__top {
+
+         margin-left: 30px;
+         margin-right: 30px;
+         margin-top: 10px;
+         display: flex;
+         justify-content: space-between;
+     }
+     .navbar__bottom_container {
+     
+     
+         justify-content: start;
+         margin-left: 30px;
+ 
+ 
+     }
+     
+     .acc__title
+    {
+        width: 100%;
+        
+    }
+    .searchtrans {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        margin-left:30px;
+        width: 50%;
+        
+    }
+    .trans
+    {
+        position: absolute;
+        left: 55%;
+        width: 40%;
+    }
+  }
+  @media (min-width: 1201px)
+  {
+    
+    .searchtrans {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: left;
+        margin: auto;
+        width:50%;
+        margin-top: 30px;
+        
+        
+    }
+    .trans
+    {
+        position: absolute;
+        left: 50%;
+        width: 50%;
+        margin-left: 100px;
+    }
+  }
 }
